--- a/package.json
+++ b/package.json
@@ -17,7 +17,19 @@
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
+    "@ngrx/component-store": "~16.0.0",
+    "@ngrx/effects": "~16.0.0",
+    "@ngrx/entity": "~16.0.0",
+    "@ngrx/router-store": "~16.0.0",
+    "@ngrx/store": "^16.0.0",
     "@nx/angular": "16.10.0",
+    "ag-grid-angular": "^30.2.0",
+    "ag-grid-community": "^30.2.0",
+    "highcharts-angular": "^3.1.2",
+    "highcharts-histogram-bellcurve": "^0.1.7",
+    "jest-css-modules-transform": "^4.4.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,6 +44,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
+    "@ngrx/schematics": "~16.0.0",
     "@nx/eslint-plugin": "16.10.0",
     "@nx/jest": "16.10.0",
     "@nx/js": "16.10.0",
@@ -44,6 +57,7 @@
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
