--- a/project.json
+++ b/project.json
@@ -10,6 +10,9 @@
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "allowedCommonJsDependencies": [
+          "highcharts"
+        ],
         "outputPath": "dist/rotnav",
         "index": "./src/index.html",
         "main": "./src/main.ts",
